# glfw_demo

./: CMakeLists.txt  README.md  main.cpp
asset/glsl/: fragment_shader.glsl
glsl/: vertex_shader.glsl
include/: input.hpp  utilities.hpp
include/glad/: glad.h
include/rendering/gl/: draw.hpp  draw_details.hpp  mesh_loader.hpp  shader_loader.hpp
lib/glad/: glad.c
src/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  input.cpp  main.cpp  utilities.cpp  utilities.hpp
src/rendering/gl/: draw.cpp  mesh_loader.cpp  query_shader.cpp  query_shader.hpp  shader_loader.cpp  version.cpp  version.hpp  vertex.hpp
